# aletheia

./: .gitignore  Dockerfile  INSTALL.md  aletheia.py  pyproject.toml  requirements.txt
.local/share/aletheia/: history.txt
aletheia-cache/octave/: TRIPLES.m
aletheialib/: attacks.py  utils.py
aletheialib/options/: auto.py  brute_force.py  calibration.py  embsim.py  feaext.py  ml.py  structural.py  tools.py
